Add aria-label to accordion buttons

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     class="accordion__btn"
                     aria-expanded="false"
                     aria-controls="answer-1"
+                    aria-label="toggle answer"
                   >
                     <img src="./images/icon-plus.svg" alt="" class="icon" />
                   </button>
@@ -68,6 +69,7 @@
                     class="accordion__btn"
                     aria-expanded="false"
                     aria-controls="answer-2"
+                    aria-label="toggle answer"
                   >
                     <img src="./images/icon-plus.svg" alt="" class="icon" />
                   </button>
@@ -89,6 +91,7 @@
                     class="accordion__btn"
                     aria-expanded="false"
                     aria-controls="answer-3"
+                    aria-label="toggle answer"
                   >
                     <img src="./images/icon-plus.svg" alt="" class="icon" />
                   </button>
@@ -110,6 +113,7 @@
                     class="accordion__btn"
                     aria-expanded="false"
                     aria-controls="answer-4"
+                    aria-label="toggle answer"
                   >
                     <img src="./images/icon-plus.svg" alt="" class="icon" />
                   </button>
